test_suite/tests/ui/malformed/cut_off.stderr
error: unexpected end of input, expected an expression
 --> tests/ui/malformed/cut_off.rs:4:17
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | #[serde(rename =)]
  |                 ^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
